After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 701392 - Empathy does not honor disabled "Automatically connect on startup"
Empathy does not honor disabled "Automatically connect on startup"
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: Preferences
3.8.x
Other Linux
: Normal major
: ---
Assigned To: empathy-maint
empathy-maint
Depends on:
Blocks:
 
 
Reported: 2013-05-31 20:35 UTC by Stephen Gallagher
Modified: 2013-08-21 06:39 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Stephen Gallagher 2013-05-31 20:35:06 UTC
I have some services that are not available at startup (I need to connect to a VPN before they will be able to access their resources). So I wanted to configure Empathy so that it wouldn't attempt to auto-connect until I manually launched it.

However, after unsetting "Automatically connect on startup" in the preferences dialog and rebooting my system, it continued to attempt to connect (and bombard me with error messages about the unreachable services).

I am running on Fedora 19 beta with empathy-3.8.3-1.fc19.x86_64
Comment 1 yefexe7584 2013-07-23 10:52:58 UTC
I have this problem as well.

Arch Linux 64 bit
gnome 3.8.3
Empathy 3.8.3
Comment 2 Jonny Lamb 2013-08-21 06:39:56 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.