preferences: only show autoconnect when shell isn't running

https://bugzilla.gnome.org/show_bug.cgi?id=701392